--- a/app/views/admin/articles/index.html.slim
+++ b/app/views/admin/articles/index.html.slim
@@ -11,8 +11,9 @@
         li
           = form_with model: @search_articles_form, scope: :q, url: admin_articles_path, method: :get, html: { class: 'form-inline' } do |f|
             => f.select :category_id, Category.pluck(:name, :id) , { include_blank: true }, class: 'form-control'
+            => f.select :author_id, Author.pluck(:name, :id) , { include_blank: true }, class: 'form-control'
             .input-group
-              = f.search_field :title, class: 'form-control'
+              = f.search_field :title, class: 'form-control', placeholder: 'タイトル'
               span.input-group-btn
                 = f.submit '検索', class: %w[btn btn-default btn-flat]
         - if policy(Article).new?
