--- a/app/views/admin/articles/index.html.slim
+++ b/app/views/admin/articles/index.html.slim
@@ -14,6 +14,8 @@
             => f.select :author_id, Author.pluck(:name, :id), { include_blank: true }, class: 'form-control'
             => f.select :tag_id, Tag.pluck(:name, :id), { include_blank: true }, class: 'form-control'
             .input-group
+              = f.search_field :body, class: 'form-control', placeholder: '記事内容'
+            .input-group
               = f.search_field :title, class: 'form-control', placeholder: 'タイトル'
               span.input-group-btn
                 = f.submit '検索', class: %w[btn btn-default btn-flat]
