--- a/app/views/admin/articles/index.html.slim
+++ b/app/views/admin/articles/index.html.slim
@@ -10,9 +10,9 @@
       .ul.list-inline
         li
           = form_with model: @search_articles_form, scope: :q, url: admin_articles_path, method: :get, html: { class: 'form-inline' } do |f|
-            => f.select :category_id, Category.pluck(:name, :id), { include_blank: true }, class: 'form-control'
-            => f.select :author_id, Author.pluck(:name, :id), { include_blank: true }, class: 'form-control'
-            => f.select :tag_id, Tag.pluck(:name, :id), { include_blank: true }, class: 'form-control'
+            => f.select :category_id, Category.pluck(:name, :id), { include_blank: Article.human_attribute_name(:category) }, class: 'form-control'
+            => f.select :author_id, Author.pluck(:name, :id), { include_blank: Article.human_attribute_name(:author) }, class: 'form-control'
+            => f.select :tag_id, Tag.pluck(:name, :id), { include_blank: Article.human_attribute_name(:tag) }, class: 'form-control'
             .input-group
               = f.search_field :body, class: 'form-control', placeholder: '記事内容'
             .input-group
