Add: 埋め込み選択画面にtwitterのアイコンを並列で追加

--- a/app/views/admin/articles/article_blocks/_insert_block.html.slim
+++ b/app/views/admin/articles/article_blocks/_insert_block.html.slim
@@ -43,6 +43,7 @@
             params: { article_block: { level: level, blockable_type: 'embed' } } \
             } do
           i.fa.fa-youtube-play
+            i.fa.fa-twitter
           '
           | 埋め込み
 
