Add: swiperの導入と読み込み設定

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,8 @@
  *= require_self
  */
 
+ @import 'swiper/swiper-bundle';
+
 .jumbotron {
   background: url('/images/cover.jpg') center / cover;
   color: white;
