Add: 記事のヘッダーに対してswiperを適用させる

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,5 +1,45 @@
-header.jumbotron.jumbotron-fluid
-  .container
+header
+  .swiper
+    .swiper-wrapper
+      - if current_site.main_images.present?
+        -current_site.main_images.each do |main_image|
+          = image_tag main_image, class: 'swiper-slide'
+      - else
+        = image_tag '/images/cover.jpg', class: 'swiper-slide'
+    .swiper-button-next    # ナビゲーションボタン(→)
+    .swiper-button-prev    # ナビゲーションボタン(←)
+    .swiper-pagination     # ページネーション
+
+  .container.blog-title
     h1 = link_to current_site.name, root_path
     p.lead = current_site.subtitle
 
+javascript:
+  $(document).ready(() => {                   // 画像などを除いて、HTML=DOMの読み込みが終わったら関数の中の処理を実行する
+    const swiper = new Swiper('.swiper', {    // クラス指定
+      // Optional parameter
+      spaceBetween: 30,       // スライド間の幅を指定
+      centeredSlides: true,   // 中央寄せにする
+      autoplay: {
+        delay: 3000,          // 切り替わり速度
+        disableOnInteraction: false,     // ユーザーがスライダーを操作したあと、自動再生が止まらなくなる
+      },
+
+      // If we need pagination
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+
+      // Navigation arrows
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+
+      // And if we need scrollbar
+      scrollbar: {
+        el: '.swiper-scrollbar',
+      },
+    })
+  });
