--- a/app/views/admin/sites/edit.html.slim
+++ b/app/views/admin/sites/edit.html.slim
@@ -16,6 +16,8 @@
         = image_tag @site.favicon_url('32x32')
         br
         br
+        = link_to '削除', admin_site_attachment_path(@site.favicon.id), class: 'btn btn-danger', method: :delete, data: { confirm: "faviconを削除してもよろしいですか？" }
+
 
       = f.input :og_image, as: :file, hint: 'JPEG/PNG (1200x630)'
 
@@ -23,6 +25,18 @@
         = image_tag @site.og_image_url(:ogp), class: 'img-responsive'
         br
         br
+        = link_to '削除', admin_site_attachment_path(@site.og_image.id), class: 'btn btn-danger', method: :delete, data: { confirm: "og:imageを削除してもよろしいですか？" }
+
+
+      = f.input :main_images, as: :file, hint: 'JPEG/PNG (1200x400)', input_html: { multiple: true }
+
+      - if @site.main_images.attached?
+        .main_images_box
+          - @site.main_images.each do |main_image|
+            .main_image
+              = image_tag main_image.variant(resize: '300x100').processed
+              br
+              = link_to '削除', admin_site_attachment_path(main_image.id), class: 'btn btn-danger', method: :delete, data: { confirm: "main:imageを削除してもよろしいですか？" }
 
     .box-footer
       = f.button :submit, '保存', class: %w[btn btn-primary]
