--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -6,40 +6,16 @@ header
           = image_tag main_image, class: 'swiper-slide'
       - else
         = image_tag '/images/cover.jpg', class: 'swiper-slide'
-    .swiper-button-next    # ナビゲーションボタン(→)
-    .swiper-button-prev    # ナビゲーションボタン(←)
-    .swiper-pagination     # ページネーション
 
   .container.blog-title
     h1 = link_to current_site.name, root_path
     p.lead = current_site.subtitle
 
 javascript:
-  $(document).ready(() => {                   // 画像などを除いて、HTML=DOMの読み込みが終わったら関数の中の処理を実行する
-    const swiper = new Swiper('.swiper', {    // クラス指定
-      // Optional parameter
-      spaceBetween: 30,       // スライド間の幅を指定
-      centeredSlides: true,   // 中央寄せにする
+  $(document).ready(function() => {                   // 画像などを除いて、HTML=DOMの読み込みが終わったら関数の中の処理を実行する
+    new Swiper('.swiper', {    // クラス指定
+      loop: true,
       autoplay: {
         delay: 3000,          // 切り替わり速度
-        disableOnInteraction: false,     // ユーザーがスライダーを操作したあと、自動再生が止まらなくなる
-      },
-
-      // If we need pagination
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
-
-      // Navigation arrows
-      navigation: {
-        nextEl: '.swiper-button-next',
-        prevEl: '.swiper-button-prev',
-      },
-
-      // And if we need scrollbar
-      scrollbar: {
-        el: '.swiper-scrollbar',
-      },
-    })
+      }
   });
